# octopolars

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: get_started.md
docs/api/: auth.md  cli.md  exprs.md  index.md  inventory.md  issues.md
docs/vercel/: deploy.sh
src/octopols/: __init__.py  cli.py  inventory.py  issues.py
